tests/negative/neg_case_on_string.safe
-- Test: neg_case_on_string
-- Description: Case on String remains outside PR11.2.
-- Expected: REJECT unsupported_source_construct

package neg_case_on_string

   function lookup (name : in string) returns integer

      case name
         when 'a'
            return 1;

         when others
            return 0;





